# ImageProcessing

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-linux.yml  build-windows.yml
cmake/: FindFreeImage.cmake  InstallDeps.cmake
src/: CMakeLists.txt
src/Editor/: CMakeLists.txt  Editor.pro  IFilterUI.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  QCanvas.cpp  QCanvas.hpp
src/Editor/Filters/: filterCanny.cpp  filterCanny.hpp  filterCanny.ui  filterConvolution.cpp  filterConvolution.hpp  filterConvolution.ui  filterConvultion.cpp  filterConvultion.hpp  filterConvultion.ui  filterGamma.cpp  filterGamma.hpp  filterGamma.ui  filterGrayscale.cpp  filterGrayscale.hpp  filterGrayscale.ui  filterInvert.cpp  filterInvert.hpp  filterInvert.ui  filterMedian.cpp  filterMedian.hpp  filterMedian.ui  filterRoberts.cpp  filterRoberts.hpp  filterRoberts.ui  filterSobel.cpp  filterSobel.hpp  filterSobel.ui
src/ImageLib/: CMakeLists.txt
src/ImageLib/include/ImageLib/: Bitmap.hpp  BitmapHelper.hpp  BitmapView.hpp  Thread.hpp
src/ImageLib/include/ImageLib/Filters/: Canny.hpp  Convolution3x3.hpp  Convultion3x3.hpp  FilterHelper.hpp  Gamma.hpp  Grayscale.hpp  Invert.hpp  Median3.hpp  Roberts.hpp  Sobel.hpp
src/ImageLib/src/: Bitmap.cpp  BitmapHelper.cpp  BitmapView.cpp  ImageLibDLL.cpp  Thread.cpp  imagelib.cpp
src/ImageLib/src/Filters/: Canny.cpp  Convolution3x3.cpp  Convultion3x3.cpp  FilterHelper.cpp  Gamma.cpp  Grayscale.cpp  Invert.cpp  Median3.cpp  Roberts.cpp  Sobel.cpp
src/include/ImageLib/: Events.hpp  IBitmap.hpp  IThread.hpp  ImageLib.hpp  Platform.hpp  Types.hpp
src/include/ImageLib/Filters/: ICanny.hpp  IConvolution.hpp  IConvultion.hpp  IFilter.hpp  IGamma.hpp  IGrayscale.hpp  IInvert.hpp  IMedian.hpp  IRoberts.hpp  ISobel.hpp
